# Moth-Game

./: .gitignore.txt  CMakeLists.txt  CMakeLists.txt.txt  CS_395_Project.sln  unique.txt
CS_395_Project/: CMakeLists.txt  CS_395_Project.vcxproj  Entity.cpp  Entity.h  SpringApp.cpp  SpringApp.h  main.cpp  unique.txt
CS_395_Project/Assets/Shaders/: defaultVertex.glsl
CS_395_Project/x64/Debug/: vc143.idb
CS_395_Project/x64/Debug/CS_395_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CS_395_Project.lastbuildstate
CS_395_Project/x64/Release/: CS_395_Project.exe.recipe  CS_395_Project.iobj  CS_395_Project.ipdb
CS_395_Project/x64/Release/CS_395_Project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Moth/: CMakeLists.txt  CMakeLists.txt.txt  Events.cpp  Events.h  GameWindow.cpp  GameWindow.h  KeyCodes.h  Moth.h  Moth.vcxproj  Moth.vcxproj.filters  MothApp.cpp  MothApp.h  MothUtil.h  Renderer.cpp  Renderer.h  RendererImplementation.h  Shader.cpp  Shader.h  ShaderImplementation.h  Sprite.cpp  Sprite.h  SpriteImplementation.h  WindowImplementation.h  pch.h
Moth/Assests/Shaders/: defaultFragment.glsl  defaultVertex.glsl
Moth/Assets/Shaders/: defaultFragment.glsl
Moth/specificGLFW/: GlfwWindow.cpp  GlfwWindow.h
Moth/specificOpenGL/: OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLSprite.cpp  OpenGLSprite.h
Moth/x64/Debug/: vc143.idb
Moth/x64/Debug/Moth.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Moth.lastbuildstate
Moth/x64/Release/: Moth.dll.recipe  Moth.iobj  Moth.ipdb
Moth/x64/Release/Moth.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Moth.lastbuildstate  Moth.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
glad/: glad.vcxproj  glad.vcxproj.filters
glad/src/: glad.c
stbi/: stbi.vcxproj
x64/Debug/: CS_395_Project.exp  CS_395_Project.lib  Moth.exp  Moth.lib  stbi.idb  stbi.lib
(+33 files in other folders)
